# UniversityLabs

./: .gitignore  README.md
ACS/Benchmark/: description.md  functions.cpp
Algorithms Complexity/SmoothSort/: Benchmark.ipynb  disk.cpp  ram.cpp  smooth_sort.cpp  smooth_sort.hpp
CSM/: description.md
CSM/Lab3/: Lab3.ipynb
CSM/Lab4/src/: InputStream.java  (+6 more)
Cloud Computations/parcs-lab/: input.txt  output.txt  parcs.py  parcs_mod.py
Computational methods/Approximation/: Distances.txt  MinimalSquaresApproximation.ipynb  NonlinearMinimumSquaresApproxmation.ipynb  TableFunction.txt
Computational methods/Differential equations/: Runge-Kutta.ipynb
Computational methods/Eigenvalues/: Matrix.txt  ScalarProductMethod.ipynb
Computational methods/Integrating/: Gauss-Lagger.ipynb  NumericalIntegration .ipynb
Computational methods/Interpolation/: Hermite_Interpolation.ipynb  Interpolation.txt
Computational methods/System of equations solving/: JacobiAlgorithm.ipynb  NonlinearEquations.ipynb  ThomasAlgorithm(Tridiagonal).ipynb  Tridiagonal.txt
Computer architecture/Benchmark/: description.md  graphics.cpp  logic.cpp  main.cpp  main.hpp
Computer architecture/Client-Server app/: client.py  description.md  server.py
OS/Dining Philosophers/: CMakeLists.txt  philosopher.hpp  philosophers
OS/Processes Interaction/: msg_queue.cpp
Operating systems/: description.md
Operating systems/Critical section/: CMakeLists.txt  main.cpp  peterson_mutex.cpp  peterson_mutex.hpp
Parallel computations/mpi/: CMakeLists.txt
Parallel computations/openMP/: CMakeLists.txt  main.cpp
(+122 files in other folders)
